
syntax = "proto3";
package user_auth;

option go_package = "./UserAuth";

import "google/protobuf/wrappers.proto";

service UserAuth {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc AuthenticateToken (AuthenticateTokenRequest) returns (google.protobuf.BoolValue) {}
}

// The request message containing the user's name.
message RegisterRequest {
    string user_name = 1;
    string password = 2;
    string userKey = 3;
}

message RegisterResponse {
    string token = 1;
}

message LoginRequest {
    string user_name = 1;
    string password = 2;
}

message LoginResponse{
    string token = 1;
}

message AuthenticateTokenRequest {
    string user_name = 1;
    string token = 2;
}
